# FH-ECE20

./: .gitignore  CMakeLists.txt  README.md  README.rst  doxygen.conf
joerg.faschingbauer/: CMakeLists.txt  onewire-temperature-joerg-faschingbauer.cpp
src/: CMakeLists.txt
src/c++-school/: CMakeLists.txt  copy-good.h  mystring.h  point.h  some-function.cpp  some-function.h
src/sensors/: CMakeLists.txt  constant-sensor.cpp  constant-sensor.h  w1-sensor.cpp  w1-sensor.h
tests/: CMakeLists.txt  basic.cpp  c++-school-suite.cpp  c++-string-suite.cpp  constant-sensor-suite.cpp  copy-good-suite.cpp  fixtures.h  gtest-demo-suite.cpp  my-string-suite.cpp  point-suite.cpp  references-suite.cpp  sensor-suite.cpp  w1-sensor-suite.cpp
